# aoc2020

./: .gitignore
haskell/: shell.nix
haskell/aoc/: CHANGELOG.md  Main.hs  aoc.cabal  default.nix  hie.yaml  shell.nix
haskell/aoc/inputs/: day7.txt
haskell/aoc/src/: AOC.hs
haskell/aoc/src/AOC/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Utils.hs
haskell/aoc/tests/AOC/: Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs
haskell/day01/: day01.cabal
nix/: default.nix  sources.json
rust/: shell.nix
