cabal-version:       >=1.10

name:                aoc
version:             0.1.0.0
author:              Tobias Pfug
maintainer:          tobias.pflug@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md


common common-options
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wno-name-shadowing
                       -XOverloadedStrings

library
  import               common-options
  exposed-modules:     AOC
                       AOC.Utils
                       AOC.Day01
                       AOC.Day02
  build-depends:       base >=4.14 && <4.15
                     , text
  hs-source-dirs:      ./src

executable aoc
  import               common-options
  main-is:             Main.hs
  build-depends:       base >=4.14 && <4.15, aoc

test-suite tests
  import               common-options
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      ./tests
  other-modules:       AOC.Day1Spec
  build-tool-depends:  hspec-discover:hspec-discover
  build-depends:       base >=4.14 && <4.15
                     , hspec
                     , aoc
                     , text
