cabal-version:       3.0

name:                aoc
version:             0.1.0.0
author:              Tobias Pfug
maintainer:          tobias.pflug@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md


common common-options
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wno-name-shadowing
                       -Wno-type-defaults

library
  import:              common-options
  exposed-modules:     AOC
                       AOC.Utils
                       AOC.Day01
                       AOC.Day02
                       AOC.Day03
                       AOC.Day04
                       AOC.Day05
  build-depends:       base >=4.14 && <4.15
                     , text
                     , split
                     , megaparsec
  hs-source-dirs:      ./src

executable aoc
  import:              common-options
  main-is:             Main.hs
  build-depends:       base >=4.14 && <4.15, aoc

test-suite tests
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      ./tests
  other-modules:       AOC.Day1Spec
                       AOC.Day2Spec
                       AOC.Day3Spec
                       AOC.Day4Spec
                       AOC.Day5Spec
  build-tool-depends:  hspec-discover:hspec-discover
  build-depends:       base >=4.14 && <4.15
                     , aoc -any
                     , hspec -any
                     , text -any
